[metadata]
name = TheOne
version = 0.1
description = The One python code formater
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Randomneo/TheOne
author = Rostyslav Misiura
author_email = rostislav9999@gmail.com
license = GPLv3
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir = =src
py_modules = the_one
install_requires =
  pytest

python_requires = >=3.8


[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults
